--- a/css/style.css
+++ b/css/style.css
@@ -53,11 +53,11 @@ li a{
 }
 
 li a:hover:not(.active) {
-    background-color: #5E88BF;
+    background-color: #5953b0;
 }
 
 .active{
-    background-color: #8F96A6;
+    background-color: #513370;
 
 }
 
@@ -68,7 +68,7 @@ li a:hover:not(.active) {
 }
 
 .card:hover{
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 8px 16px 0px rgba(244, 7, 7, 0.2);
 }
 
 .container{
