--- a/css/style.css
+++ b/css/style.css
@@ -1,77 +1,113 @@
-body{
-    margin: 0px;
-    padding: 0px;
-    font-family: 'Inter', sans-serif;
+body {
+  margin: 0px;
+  padding: 0px;
+  font-family: "Inter", sans-serif;
 }
 
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
-.flex-container{
-    margin-top: 60px;
-    max-width: 1080px;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    flex-direction: row;
-    font-size: 30px;
-    text-align: center;
+.flex-container {
+  margin-top: 60px;
+  max-width: 1080px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: row;
+  font-size: 30px;
+  text-align: center;
 }
 
-
-.flex-item{
-    padding: 10px;
-    flex: 50%;
+.flex-item {
+  padding: 10px;
+  flex: 50%;
 }
-
 
 @media (max-width: 800px) {
-    .flex-container{
-        flex-direction: column;
-    }
+  .flex-container {
+    flex-direction: column;
+  }
 }
 
-ul{
-    list-style-type: none;    
-    margin: 0px;
-    padding: 0px;
-    overflow: hidden;
-    background-color: #0468BF;
+ul {
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+  overflow: hidden;
+  background-color: #0468bf;
 }
 
-li{
-    float: left;
-    }
-
-li a{
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+li {
+  float: left;
+}
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
 li a:hover:not(.active) {
-    background-color: #5953b0;
+  background-color: #5953b0;
 }
 
-.active{
-    background-color: #513370;
-
+.active {
+  background-color: #513370;
 }
 
-.card{
-    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    width: 100%;
+.card {
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  width: 100%;
 }
 
-.card:hover{
-    box-shadow: 0px 8px 16px 0px rgba(244, 7, 7, 0.8);
+.card:hover {
+  box-shadow: 0px 8px 16px 0px rgba(244, 7, 7, 0.8);
 }
 
-.container{
-    padding: 2px 16px;
-    font-size: medium;
+.container {
+  padding: 2px 16px;
+  font-size: medium;
+}
+
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  perspective: 1000px;
+}
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+.flip-card-front {
+  background-color: black;
+  color: #d97ea8;
+}
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+.flip-card-front {
+  background-color: black;
+  color: #513370;
+}
+.flip-card-back {
+  background-color: #0468bf;
+  color: #513370;
+  transform: rotateY(180deg);
 }
