--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,56 @@ body {
   padding: 0px;
   font-family: "Inter", sans-serif;
 }
+.imageBanner {
+  width: 100%;
+  height: 100%;
+}
+
+.tablink {
+  background-color: #0468bf;
+  color: white;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  font-size: 17px;
+  width: 25%;
+}
+
+.tablink:hover {
+  background-color: #513370;
+}
+
+.tabcontent {
+  color: white;
+  display: none;
+  padding: 50px;
+  text-align: center;
+  width: 100%;
+  height: 560px;
+}
+
+#banner1 {
+  background-image: url("../img/1.png");
+  background-position: center;
+  background-repeat: no-repeat;
+}
+#banner2 {
+  background-image: url("../img/2.png");
+  background-position: center;
+  background-repeat: no-repeat;
+}
+#banner3 {
+  background-image: url("../img/3.png");
+  background-position: center;
+  background-repeat: no-repeat;
+}
+#banner4 {
+  background-image: url("../img/2.png");
+  background-position: center;
+  background-repeat: no-repeat;
+}
 
 * {
   box-sizing: border-box;
@@ -50,7 +100,7 @@ li a {
 }
 
 li a:hover:not(.active) {
-  background-color: #5953b0;
+  background-color: #513370;
 }
 
 .active {
