--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 .tablink:hover {
-  background-color: #513370;
+  background-color: #888;
 }
 
 .tabcontent {
@@ -49,9 +49,15 @@ body {
   background-repeat: no-repeat;
 }
 #banner4 {
-  background-image: url("../img/2.png");
+  background-image: url("../img/4.png");
   background-position: center;
   background-repeat: no-repeat;
+}
+#bannerForm{
+  background-image: url(../img/4.png);
+  background-position: center;
+  height: 560px;
+  width: 100%;
 }
 
 * {
@@ -100,11 +106,11 @@ li a {
 }
 
 li a:hover:not(.active) {
-  background-color: #513370;
+  background-color: #888;
 }
 
 .active {
-  background-color: #513370;
+  background-color: #888;
 }
 
 .card {
@@ -120,6 +126,7 @@ li a:hover:not(.active) {
 .container {
   padding: 2px 16px;
   font-size: medium;
+  height: 120px;
 }
 
 .flip-card {
