--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,54 @@ body {
   height: 100%;
 }
 
+.form-container{
+  padding: 16px;
+  background-color: aliceblue;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  
+}
+
+input[type=text], input[type=password]{
+width: 100%;
+padding: 15px;
+margin: 5px 0 22px 0;
+display: inline-block;
+border: none;
+background-color: #f1f1f1;
+}
+
+input[type=text]:focus, input[type=password]:focus{
+background-color: #ddd;
+outline: none;
+}
+hr{
+  border: 1px solid #0468bf;
+  margin-bottom: 25px;
+}
+.registerbtn{
+width: 100%;
+color: #0468bf;
+background-color: #d97ea8;
+padding: 16px 20px;
+margin: 8px 0;
+border: none;
+cursor: pointer;
+opacity: 0.9;
+}
+.registerbtn:hover{
+ opacity: 1;
+}
+a{
+  color: #555;
+}
+.signin{
+  background-color: #f1f1f1;
+  text-align: center;
+}
+
+
 .tablink {
   background-color: #0468bf;
   color: white;
